# GameEngineWaza3D

./: CMakeLists.txt
core/: CMakeLists.txt
core/includes/: application.hpp  camera.hpp  event.hpp  input.hpp  keys.hpp  logs.hpp  model.hpp  object.hpp  scene.hpp
core/src/: application.cpp  camera.cpp  input.cpp  model.cpp  object.cpp  scene.cpp  window.cpp  window.hpp
core/src/Modules/: UI_module.cpp  UI_module.hpp
core/src/Rendering/OpenGL/: buffer_layout.cpp  index_buffer.cpp  index_buffer.hpp  render.cpp  render.hpp  shader_program.cpp  shader_program.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp
editor/: CMakeLists.txt
editor/src/: main.cpp
